<resources>
    <string name="app_name">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="textview">Email</string>
    <string name="password">Password</string>
    <string name="string_password" />
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="string_string_password">Password</string>
</resources>